# linguistic-diversity

./: .gitignore  COMPLETE_FEATURES.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  MODERNIZATION_SUMMARY.md  Makefile  PURE_PYTHON.md  QUICKSTART.md  README.md  UNIVERSAL_METRIC_GUIDE.md  benchmark_universal.py  pyproject.toml  run_tests.py
.github/workflows/: ci.yml  publish.yml
examples/: README.md  all_metrics.py  basic_usage.py  universal_metric.py  visualize_diversity.py
src/linguistic_diversity/: __init__.py  composite.py  metric.py  selection.py  utils.py
src/linguistic_diversity/diversities/: __init__.py  morphological.py  phonological.py  rhythmic_analyzer.py  semantic.py  syntactic.py  universal.py
tests/: __init__.py  test_metric.py  test_morphological.py  test_phonological.py  test_semantic.py  test_syntactic.py
use_cases/: README.md
use_cases/authorship_verification/: README.md  authorship_verification.py  confidence_and_cv_evaluation.py  full_dataset_evaluation.py  hybrid_stylometry.py  improved_analysis.py  next_steps_implementation.py  validation_and_optimization.py
use_cases/authorship_verification/output/verification/: improved_report.txt  report.txt
use_cases/coreset_for_instruction_tuning/: README.md  config.yaml  requirements.txt  run_pipeline.py
use_cases/coreset_for_instruction_tuning/output/: REPORT.md
use_cases/coreset_for_instruction_tuning/output/adapters/Mistral-7B-v0.3_alpaca_gpt4_diversity_seed123/: README.md
use_cases/coreset_for_instruction_tuning/processing/: 01_prepare_data.py  02_select_subsets.py  03_finetune.py  04_evaluate.py  05_generate_report.py  __init__.py
use_cases/dementiabank/: README.md  config.yaml  evaluate_composite.py  run_evaluation.py
use_cases/dementiabank/output/report/: evaluation_report.md
use_cases/dementiabank/output/scores/: composite_summary.txt  computation_metadata.txt  statistical_report.txt
use_cases/dementiabank/processing/: 01_download_data.py  02_preprocess.py  03_compute_metrics.py  04_analyze_results.py  05_create_plots.py  05_create_plots_simple.py  06_generate_report.py
use_cases/finetuning_selection/: README.md  config.yaml  requirements.txt  run_all.py
use_cases/finetuning_selection/output/: finetuning_report.md
use_cases/finetuning_selection/processing/: 01_extract_features.py  02_select_subsets.py  03_finetune_evaluate.py  04_generate_report.py
use_cases/pretraining_selection/: README.md  config.yaml  run_pipeline.py  run_universal_embedding_experiment.py
use_cases/pretraining_selection/output/: evaluation_report.md
use_cases/pretraining_selection/output/pass1_aggressive_early_stopping/: evaluation_report.md
use_cases/pretraining_selection/processing/: 01_download_data.py  02_extract_features.py  03_select_subsets.py  03b_create_full_dataset.py  04_train_models.py  04b_train_full_dataset.py  05_evaluate_models_and_diversity.py  06_generate_report.py  06b_evaluate_encoder_glue.py  06c_evaluate_decoder_lmeval.py  06d_evaluate_encdec_tasks.py  07_generate_report.py  model_loader.py  model_utils.py
