[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linguistic-diversity"
version = "1.0.0"
description = "Linguistic diversity metrics using similarity-sensitive Hill numbers"
authors = [
    {name = "Fabrice Harel-Canada", email = "fabriceyhc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["nlp", "diversity", "linguistics", "metrics", "hill-numbers", "text-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.24.0",  # faiss compatible with numpy 2.x
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.3.0",
    "spacy>=3.7.0",
    "biopython>=1.81",
    "networkx>=3.0",
    "zss>=1.2.0",
    "tqdm>=4.65.0",
    # Note: Install faiss via conda for GPU support:
    #   conda install -c pytorch -c nvidia faiss-gpu=1.8.0
    # Or for CPU only: pip install faiss-cpu
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
    "pre-commit>=3.6.0",
]

viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
]

syntactic = [
    "benepar>=0.2.0",
    "karateclub>=1.3.0",  # Optional: only needed for ldp/feather similarity
]

phonological = [
    "g2p-en>=2.1.0",  # Pure Python, grapheme-to-phoneme
    "pyphen>=0.14.0",  # Pure Python, syllabification
    "pronouncing>=0.2.0",  # Pure Python, pronunciation dictionary with stress
    # Note: cadences is broken on PyPI (has metadata but no code)
    # "cadences>=0.3.4",
    # Optional: phonemizer (requires espeak-ng system library)
    # "phonemizer>=3.2.0",
]

pretraining = [
    "apricot-select>=0.6.0",  # Submodular selection for data curation
    "datasets>=2.0.0",  # Hugging Face datasets library
]

all = [
    "linguistic-diversity[dev,viz,docs,syntactic,phonological,pretraining]",
]

[project.urls]
Homepage = "https://github.com/fabriceyhc/linguistic-diversity"
Repository = "https://github.com/fabriceyhc/linguistic-diversity"
Issues = "https://github.com/fabriceyhc/linguistic-diversity/issues"
Documentation = "https://linguistic-diversity.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
linguistic_diversity = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "T20", # flake8-print
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S301",   # pickle usage
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["S101", "ANN"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "benepar.*",
    "phonemizer.*",
    "cadences.*",
    "karateclub.*",
    "zss.*",
    "amrlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
